--- a/examen_parcial/gestion_tareas/templates/gestion_tareas/dashboard.html
+++ b/examen_parcial/gestion_tareas/templates/gestion_tareas/dashboard.html
@@ -9,54 +9,49 @@
     <title>Dashboard</title>
 </head>
 <body style="background-color: rgba(0,0,0, 0.1);" >
-    <h1 class="py-2 bg-secondary text-center text-light">GESTIÓN DE TAREAS</h1> 
+    <h1 class="py-2 bg-secondary text-center text-light">GESTIÓN DE TAREAS</h1>
     <div class="container  ">
-        <div class="row text-center mt-5 ">
+        <div class="row   ">
             <div class="col-md-10' mx-auto">
-
-                <table class="table table-striped">
-                    <thead class="table-dark">
-                      <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">NOMBRE</th>
-                        <th scope="col">ESTADO</th>
+              <a class="btn btn-primary mb-3 w-25 fw-bold ms-auto" href="{% url 'gestion_tareas:vista_creacion'  %}">Crear Tarea</a>
+                <table class="table table-striped text-center table-hover">
+                    <thead class="table-dark ">
+                      <tr >
+                        <!-- <th scope="col">ID</th> -->
+                        <th class="my-auto" scope="col">Usuario Responsable</th>
+                        <th scope="col">Fecha de Creación</th>
+                        <th scope="col">Fecha de Entrega</th>
+                        <th scope="col">Descripción</th>
+                        <th scope="col">Estado de la tarea</th>
                         <th scope="col">ACCIONES</th>
-                        <th scope="col">ACCIONES</th>
+                        
                       </tr>
                     </thead>
                     <tbody>
+                      {% for tareas in tareas_usuario %}
                       <tr>
-                        <th scope="row">1</th>
-                        <td colspan="2" class="bg-warning">Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                       
+                       <!--  <th scope="row">{{ tareas.id }}</th> -->
+                        <td>{{ tareas.usuario_responsable }}</td>
+                        <td>{{ tareas.fecha_de_creacion }}</td>
+                        <td>{{ tareas.fecha_entrega }}</td>
+                        <td>{{ tareas.descripcion }}</td>
                         
+                        <td>{{ tareas.estado_dela_tarea }}</td>
+                        <td><a class="btn btn-success" href={% url "gestion_tareas:vista_edicion" tareas.id %}>Editar</a><a class="btn btn-warning  m-1" href={% url "gestion_tareas:vista_detallada" tareas.id %}>Detalles</a><a class="btn btn-danger  m-1" href={% url "gestion_tareas:delete" tareas.id   %}>ELiminar</a></td>
                       </tr>
-                      <tr>
-                        <th scope="row">2</th>
-                        <td colspan="2">Jacob</td>
-                        <td>Thornton</td>
-                        <td><a class="btn btn-danger me-1" href="#">hi</a><a class="btn btn-primary" href="#">hi</a></td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                        <td><a class="btn btn-danger me-1" href="#">hi</a><a class="btn btn-success" href="#">hi</a></td>
-                      </tr>
-                      <tr>
-                        <th scope="row">3</th>
-                        <td colspan="2">Larry the Bird</td>
-                        <td>@twitter</td>
-                        <td><a class="btn btn-danger me-1" href="#">hi</a><a class="btn btn-warning" href="#">hi</a></td>
-                      </tr>
+
+  
+                      {% endfor %}
+                      
                     </tbody>
                   </table>
+                 
             </div>
         </div>
             
     </div>
-
+   
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
