--- a/examen_parcial/gestion_tareas/templates/gestion_tareas/vista_creacion.html
+++ b/examen_parcial/gestion_tareas/templates/gestion_tareas/vista_creacion.html
@@ -21,7 +21,7 @@
             <div class="form-group col-md-3">
                 <label for="start">Fecha Inicio</label>
             
-                <input type="date" value="{{ fecha|date:'Y-m-d' }}" id="start" class="form-control" name="fechainicio">
+                <input type="date"  id="start" class="form-control" name="fechainicio">
               <p id="fecha"></p>
             </div>
                <div class="form-group col-md-3">
