--- a/examen_parcial/gestion_tareas/templates/gestion_tareas/vista_detallada.html
+++ b/examen_parcial/gestion_tareas/templates/gestion_tareas/vista_detallada.html
@@ -9,33 +9,48 @@
     <title>Login</title>
 </head>
 <body style="background-color: rgba(0,0,0, 0.1); height: 100vh;" >
-    <h1 class="py-2 bg-secondary text-center text-light">GESTIÓN DE TAREAS</h1>
+    <h1 class="py-2 bg-secondary text-center text-light">DETALLE DE LA TAREA</h1>
     <div class="container fs-3"  >
 
         <form action="{% url 'gestion_tareas:vista_detallada' tarea_detalle.id %}" method="post">
                 {% csrf_token %}
             <div class="row p-3 border border-primary bg-light">
                 <div class="col-md-4 ml-auto fw-bold">
-                    Usuario Responsable:  
+                    Usuario Responsable:
                 </div>
                 <div class="col-md-6">
                     {{ tarea_detalle.usuario_responsable }}
 
                 </div>
             </div>
-            <div class="row p-3 border border-primary rounded bg-light">
+            <div class="row p-3 border border-primary bg-light">
+                <div class="col-md-4 ml-auto fw-bold">
+                    Nombre de Tarea:
+                </div>
+                <div class="col-md-6">
+                    {{ tarea_detalle.nombre_tarea }}
 
-                <div class="col-md-4 fw-bold">Fecha de Creación:</div>
-                <div class="col-md-6">{{ tarea_detalle.fecha_de_creacion }}</div>
+                </div>
             </div>
-           <div class="row p-3 border border-primary rounded bg-light">
+            <div class="row p-3 border border-primary rounded bg-light">
+                <div class="col-md-6 ">
 
-            <div class="col-md-4 fw-bold">Fecha de entrega: </div>
-            <div class="col-md-6">{{ tarea_detalle.fecha_entrega }}</div>
-           </div>
+                    <div class="col-md-6 fw-bold">Fecha de Creación:</div>
+                    <div class="col-md-6">{{ tarea_detalle.fecha_de_creacion }}</div>
+                </div>
+                <div class="col-md-6 ">
+
+                    <div class="col-md-6 fw-bold ">Fecha de entrega: </div>
+                    <div class="col-md-6 ">{{ tarea_detalle.fecha_entrega }}</div>
+                </div>
+            </div>
+           
+
+         
            <div class="row p-3 border border-primary rounded bg-light">
             <div class="col-md-4 fw-bold">Descripción de la Tarea:</div>
-            <div class="col-md-6">{{ tarea_detalle.descripcion }}</div>
+            <div class="col-md-6">
+                <h4>{{ tarea_detalle.descripcion }}</h4></div>
            </div>
             <div class="row p-3 border border-primary rounded bg-light">
 
@@ -43,9 +58,9 @@
                 <div  class="col-md-6">{{ tarea_detalle.estado_dela_tarea }}</div>
             </div>
     
-        </div>
+        </div >
        
-            <div class="col d-flex justify-content-around mt-5">
+            <div class="col d-flex justify-content-around mt-5  pb-4">
 
                 <a class="col-3 btn btn-success float-start" href="/dashboard">Salir</a>
                 <button type="submit" class="col-3 btn btn-danger float-start">Finalizar</button>
